--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <html>
   <head>
-    <title>Лев Леонов</title>
+    <title>Lev Leonov</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <header>
-      <a class="link-header" href="leonov.html">Леонов Лев</a>
+      <a class="link-header" href="leonov.html">Lev Leonov</a>
     </header>
     <main>
       <nav>
-        <a class="link-nav" href="mysites.html"><b>мои лучшие работы</b></a>
-        <a class="link-nav" href="info.html"><b>полезные ссылки и советы новичкам</b></a>
+        <a class="link-nav" href="mysites.html"><b>my best work</b></a>
+         <a class="link-nav" href="info.html"><b>useful links and tips for beginners</b></a>
       </nav>
       <section class="description">
         <h1>Web-sites<br/> developer</h1>
         <div class="container-description">
-          <p>разметка и стилизация</p>
-          <p>вёрстка сетчатых макетов</p>
-          <p>двумерные анимации <br/>и интерактивные элементы</p>
-          <p>мультимедиа на сайте</p>
+          <p>markup and styling</p>
+           <p>layout grid layouts</p>
+           <p>2D animations <br/>and interactive elements</p>
+           <p>multimedia on the site</p>
         </div>
       </section>
       <div class="container">
