--- a/leonov.html
+++ b/leonov.html
@@ -1,19 +1,19 @@
 <html>
   <head>
-    <title>Обо мне</title>
+    <title>About me</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <header>
-      <a class="link-header" href="index.html">Главная</a>
+      <a class="link-header" href="index.html">Home</a>
     </header>
     <main>
       <section class="description">
-        <h1>Леонов Лев</h1>
+        <h1>Leonov Lev</h1>
         <ul>
-          <li>люблю играть в игры</li>
-          <li>катаюсь на скейте</li>
-          <li>делаю сайты</li>
+          <li>I like to play games</li>
+          <li>skating</li>
+          <li>I make websites</li>
         </ul>
       </section>
       <div class="container">
