--- a/mysites.html
+++ b/mysites.html
@@ -15,13 +15,12 @@
       <div class="container">
         <section class="sites">
           <p><a class="link-text" href="https://asmartinel.wixsite.com/bigcatsite/"><b>Site</b></a> of a cattery from several pages was assembled in Wix </p>
-          <p><a class="link-text" href="https://kurs-ss-vilboa.github.io/-3-4-/"><b>Site</b></a> gaming studio, the styles were written in the style</p> 
-          <p><a class="link-text" href="https://nadvilboa.github.io/4-4-1/"><b>Site</b></a> of the fireworks store, CSS- selectors, stylesheet</p>
-          <p><a class="link-text" href="https://www.figma.com/file/yJ5xvz8KVMHojc2Z0R4Yh1/%D0%BC5%D1%834-%D0%BF%D1%80%D0%BE %D0%B5%D0%BA%D1%82?node-id=0%3A1"><b>Layout</b></a> of a multi-page site made in Figma</p>
-          <p><a class="link-text" href="https://nadvilboa.github.io/5-4-1/"><b>Site</b></a> of the Samoilov family , indents</p>
+          <p><a class="link-text" href="https://translations-algo.github.io/gameLab.html/"><b>Site</b></a> gaming studio, the styles were written in the style</p> 
+          <p><a class="link-text" href="https://translations-algo.github.io/ws-eng-m4l4/"><b>Site</b></a> of the fireworks store, CSS- selectors, stylesheet</p>
+          <p><a class="link-text" href="https://www.figma.com/file/IPijLWHOj5PtZhxP4aHCEx/M5L4-Project?node-id=0%3A1"><b>Layout</b></a> of a multi-page site made in Figma</p>
+          <p><a class="link-text" href="https://translations-algo.github.io/ws-eng-m5l4-1/"><b>Site</b></a> of the Samoilov family , indents</p>
           <p><a class="link-text" href="https://nadvilboa.github.io/6-4-1/"><b>Website</b></a> of the Bitmarket computer store</p>
-          <p><a class="link-text" href="https://nadvilboa.github.io/7-4-1/"><b>Website</b></a> Bitmarket, finalized</p>
-          <p>Bonus: <a class="link-text" href="https://nadvilboa.github.io/-4-3_bonus/"><b>Esports tournament website</b></a></a></p>
+          <p>Bonus: <a class="link-text" href="https://translations-algo.github.io/wc-eng-m4l3/"><b>Esports tournament website</b></a></a></p>
         </section>
         <img src="https://mars.algoritmika.org/uploads/2021/04/hexagon-2307350_0_1618340277.svg" width="400px" height="400px"/>
       </div>
