--- a/mysites.html
+++ b/mysites.html
@@ -19,7 +19,7 @@
           <p><a class="link-text" href="https://translations-algo.github.io/ws-eng-m4l4/"><b>Site</b></a> of the fireworks store, CSS- selectors, stylesheet</p>
           <p><a class="link-text" href="https://www.figma.com/file/IPijLWHOj5PtZhxP4aHCEx/M5L4-Project?node-id=0%3A1"><b>Layout</b></a> of a multi-page site made in Figma</p>
           <p><a class="link-text" href="https://translations-algo.github.io/ws-eng-m5l4-1/"><b>Site</b></a> of the Samoilov family , indents</p>
-          <p><a class="link-text" href="https://nadvilboa.github.io/6-4-1/"><b>Website</b></a> of the Bitmarket computer store</p>
+          <p><a class="link-text" href="https://translations-algo.github.io/m6l4_eng_minimum/"><b>Website</b></a> of the Bitmarket computer store</p>
           <p>Bonus: <a class="link-text" href="https://translations-algo.github.io/wc-eng-m4l3/"><b>Esports tournament website</b></a></a></p>
         </section>
         <img src="https://mars.algoritmika.org/uploads/2021/04/hexagon-2307350_0_1618340277.svg" width="400px" height="400px"/>
