--- a/mysites.html
+++ b/mysites.html
@@ -15,7 +15,7 @@
       <div class="container">
         <section class="sites">
           <p><a class="link-text" href="https://asmartinel.wixsite.com/bigcatsite/"><b>Site</b></a> of a cattery from several pages was assembled in Wix </p>
-          <p><a class="link-text" href="https://translations-algo.github.io/gameLab.html/"><b>Site</b></a> gaming studio, the styles were written in the style</p> 
+          <p><a class="link-text" href="https://translations-algo.github.io/gameLab.html"><b>Site</b></a> gaming studio, the styles were written in the style</p> 
           <p><a class="link-text" href="https://translations-algo.github.io/ws-eng-m4l4/"><b>Site</b></a> of the fireworks store, CSS- selectors, stylesheet</p>
           <p><a class="link-text" href="https://www.figma.com/file/IPijLWHOj5PtZhxP4aHCEx/M5L4-Project?node-id=0%3A1"><b>Layout</b></a> of a multi-page site made in Figma</p>
           <p><a class="link-text" href="https://translations-algo.github.io/ws-eng-m5l4-1/"><b>Site</b></a> of the Samoilov family , indents</p>
